[package]
name = "learn_engine"
version = "0.1.0"
authors = ["monadnadnad <hmcust810114514@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
cgmath = "0.18.0"
clap = "2.33.3"


[dependencies.gltf]
version = "0.16.0"
features = ["names"]
